- Update to latest release.

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "fouridx.doc.tar.xz": 2a55ae9eed57ddfdd88fdf031c8dac0aa0f60722
-  "fouridx.source.tar.xz": 830dc79aae71b1a0f7a052c738122cdcbaf02944
-  "fouridx.tar.xz": b9814845d2a0b6c886d16a88d163b7c3206b89d4
+  fouridx.doc.tar.xz: b19b848f5faf1e5a673f1c1c0190139187ed7e11
+  fouridx.source.tar.xz: ed5386b1623a675bcba8a809ad1909f4178b3dd5
+  fouridx.tar.xz: 098538e8412dbb3f027b6421aec747362a41772c
